--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">获奖项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
             <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a></li>
-            <li><a href="default.html" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">英文网站</a></li>
+            <li><a href="weixin://contacts/profile/kb727dotcom" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">添加微信</a></li>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -62,22 +62,11 @@
                 <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
                 <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
-                <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
+                <li><a href="weixin://contacts/profile/kb727dotcom" target="_blank"  title="添加微信" alt="添加微信" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-weixin fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
     <!-- /Full Page Image Header Area -->
-
-                <!-- fontawesome.com
-                Please click on the attachment: <a href="attachments/fitness.xlsx"><i class="fa-solid fa-sheet-plastic"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.jpg"><i class="fa-regular fa-image"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.png"><i class="fa-solid fa-image"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.pdf"><i class="fa-solid fa-file-pdf"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.m4a"><i class="fa-solid fa-music"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.mp4"><i class="fa-solid fa-video"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.docx"><i class="fa-regular fa-file"></i></a></dd></br>
-                Please click on the attachment: <a href="attachments/fitness.doc"><i class="fa-solid fa-file"></i></a></dd></br>
-    -->
 
     <!-- Intro -->
     <div id="about" class="intro">
@@ -116,7 +105,7 @@
 
     <div id="services-1" class="services">
         <div class="container">
-                <h3 style="text-align: left"><b>美国高中、本科、硕士、博士申请辅导</b></h3>
+                <h3 style="text-align: left"><b>美国高中、本科、硕士、博士及美国签证、驾驶执照、银行账户申请辅导</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;请联系america@kb727.com预约美国留学中介。</br>
                 &emsp;&emsp;首先，我要说的是这家中介的专业性和服务质量。在我找了十多家中介都不满意的情况下，我最后选择了这家美国留学中介。他们的团队非常专业，对美国的教育体系和申请流程了如指掌。在与他们沟通的过程中，我发现他们对每个细节都非常关注，让我感受到了他们的用心和专业。</br>
@@ -581,7 +570,7 @@
                 <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
                 <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
-                <li><a href="default.html" target="_blank"  title="英文网站" alt="英文网站" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-earth-americas fa-3x"></i></a></li>
+                <li><a href="weixin://contacts/profile/kb727dotcom" target="_blank"  title="添加微信" alt="添加微信" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-weixin fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
