--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">获奖项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
             <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a></li>
-            <li><a href="weixin://contacts/profile/kb727dotcom" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">添加微信</a></li>
+            <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -58,11 +58,11 @@
             <h2><b>提供奖励和支持</b></h2>
             </div></br></br></br></br>
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
-                <li><a href="weixin://contacts/profile/kb727dotcom" target="_blank"  title="添加微信" alt="添加微信" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-weixin fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-brands fa-trello fa-3x"></i></a></li>
+                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-person-chalkboard fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-flipboard fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
     </div>
@@ -566,11 +566,11 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-regular fa-thumbs-up fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-circle-nodes fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-solid fa-trophy fa-3x"></i></a></li>
-                <li><a href="weixin://contacts/profile/kb727dotcom" target="_blank"  title="添加微信" alt="添加微信" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-weixin fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-brands fa-trello fa-3x"></i></a></li>
+                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-person-chalkboard fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-flipboard fa-3x"></i></a></li>
+                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
