--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </br></br>
                 &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
-                &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持，欢迎您发送邮件给 Min@kb727.com 联系我。
+                &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持，欢迎您发送邮件给 min@kb727.com 联系我。
                 </br></br>
                 </p>
             </div>
@@ -107,7 +107,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>美国高中、本科、硕士、博士及美国签证、驾驶执照、银行账户申请辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系america@kb727.com预约美国留学中介。</br>
+                &emsp;&emsp;请联系 min@kb727.com 预约美国留学中介。</br>
                 &emsp;&emsp;首先，我要说的是这家中介的专业性和服务质量。在我找了十多家中介都不满意的情况下，我最后选择了这家美国留学中介。他们的团队非常专业，对美国的教育体系和申请流程了如指掌。在与他们沟通的过程中，我发现他们对每个细节都非常关注，让我感受到了他们的用心和专业。</br>
                 &emsp;&emsp;其次，这家中介的服务范围非常广泛。除了提供文书申请服务外，他们还为我提供了签证辅导、住宿安排等一系列服务。在整个申请过程中，我都不需要操心任何事情，因为他们会全程跟进并确保一切顺利进行。这种一站式的服务让我感到非常省心，也让我对这家中介更加信任。</br>
                 &emsp;&emsp;最后，我想说的是这家中介的价格合理且性价比高。虽然他们的服务质量非常高，但他们的价格却非常合理。在我对比了很多家中介后，我发现他们的性价比是最高的。这也是我最终选择他们的重要原因之一。</br>
@@ -136,7 +136,7 @@
                 &emsp;&emsp;11.生产运营类及大宗原材料采购及实施方案；</br>
                 &emsp;&emsp;12.其他咨询服务类及零星采购实施策略；</br>
                 &emsp;&emsp;13.“数字化”发展到“数智化”赋能招采的实践。</br>
-                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系business@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系 business@kb727.com 预约资深专家，全部讲解需120分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -147,7 +147,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>酒店资产购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导酒店资产收购需要关注的土地及建筑物、设备设施、监管要求、证照、法务、财务、税务、价格、投资回报、市场、地理位置、品牌、声誉、人员等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导酒店资产收购需要关注的土地及建筑物、设备设施、监管要求、证照、法务、财务、税务、价格、投资回报、市场、地理位置、品牌、声誉、人员等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -158,7 +158,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>办公楼购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导办公楼资产收购需要关注的开发商资质、土地及建筑物、土地性质、规划面积/计容面积/实测面积、设备设施、监管要求、证照、法务、财务、税务、维修基金、付款进度与比例、区域成交均价、建安费用成本、投资回报、区位、品牌昭示、办公物业范围、地块使用及物业管理区域划分、交付标准、产权车位等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导办公楼资产收购需要关注的开发商资质、土地及建筑物、土地性质、规划面积/计容面积/实测面积、设备设施、监管要求、证照、法务、财务、税务、维修基金、付款进度与比例、区域成交均价、建安费用成本、投资回报、区位、品牌昭示、办公物业范围、地块使用及物业管理区域划分、交付标准、产权车位等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -169,7 +169,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>二手地及建筑物资产出售岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导二手地及建筑物资产出售岗位所需掌握的新增意向客户、安排高层会议、签订框架协议及保密协议、保证金到账、确认客户的项目规划方案、政府初步接受意向客户及其项目规划方案、与政府沟通并达成有利于项目推进的共识、政府基本接受客户项目规划方案、对接政府推荐的意向客户或收储平台、推动党委和政府对项目方案形成决定、内部会签与决策、签订交易合同或征收协议、首付款到账、尾款到账、资产交割与档案交接。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导二手地及建筑物资产出售岗位所需掌握的新增意向客户、安排高层会议、签订框架协议及保密协议、保证金到账、确认客户的项目规划方案、政府初步接受意向客户及其项目规划方案、与政府沟通并达成有利于项目推进的共识、政府基本接受客户项目规划方案、对接政府推荐的意向客户或收储平台、推动党委和政府对项目方案形成决定、内部会签与决策、签订交易合同或征收协议、首付款到账、尾款到账、资产交割与档案交接。
                 </p>
         </div>
     </div>
@@ -180,7 +180,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>资产经营总经理岗位求职面试辅导和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导并内推资产经营总经理岗位求职面试：</br>
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导并内推资产经营总经理岗位求职面试：</br>
                 &emsp;&emsp;✔️  境内外大中型物流仓储及其地产、基金的重要人事变动。</br>
                 &emsp;&emsp;✔️  境内外大中型物流仓储及其地产、基金在“投、融、管、退”各方面的重要动态信息。</br>
                 &emsp;&emsp;✔️  全国各地各级政府在重点区域的招商部署、飞地或联络处安排。</br>
@@ -199,7 +199,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>物流地产投资总监岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，辅导物流地产投资总监岗位求职面试所涉及的区位分析、货车限行管控、地块周边市政配套、土地价格、土地性质、土地年限、容积率及双倍计容、投资强度、税收要求、监管协议与投资协议罚则及违约条款、人防设施、绿化率、开/竣工时间、项目转让约束、集团穿透连带责任、土地摘牌、土地出让合同、用地规划许可证、土地证、工程规划许可证、施工许可证、房产证等关键节点。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导物流地产投资总监岗位求职面试所涉及的区位分析、货车限行管控、地块周边市政配套、土地价格、土地性质、土地年限、容积率及双倍计容、投资强度、税收要求、监管协议与投资协议罚则及违约条款、人防设施、绿化率、开/竣工时间、项目转让约束、集团穿透连带责任、土地摘牌、土地出让合同、用地规划许可证、土地证、工程规划许可证、施工许可证、房产证等关键节点。
                 </p>
         </div>
     </div>
@@ -223,7 +223,7 @@
                 &emsp;&emsp;11.电气工程师的出差及工具包；</br>
                 &emsp;&emsp;12.电气工程师的海外就业；</br>
                 &emsp;&emsp;13.电气工程师的职业素养。</br>
-                &emsp;&emsp;请联系business@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -234,7 +234,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>银行社招和校招岗位分析与面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系banking@kb727.com预约曾在总行担任高级管理人员的导师，辅导社会招聘、校园招聘的网申程序、填报志愿、岗位分析，在结构化面试前做适当演练和点评。
+                &emsp;&emsp;请联系 banking@kb727.com 预约曾在总行担任高级管理人员的导师，辅导社会招聘、校园招聘的网申程序、填报志愿、岗位分析，在结构化面试前做适当演练和点评。
                 </p>
         </div>
     </div>
@@ -245,7 +245,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>银行产品开发岗位面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;对于多数银行来说，当前主要考虑如何提高产品和服务的技术含量与附加值，避免金融服务同质化；如何进一步加大市场准入创新力度，争取基金托管、离岸金融、资产证券化、境外代客理财等市场准入资格，拓展经营范围和领域；如何开辟主动负债工具，探索发行金融债、可转债等筹资新品，优化资产、负债和资本结构；如何加快财富管理、衍生产品交易、电子银行产品、贸易融资等相关产品开发，通过新品开发吸引新、老客户；如何继续完善公金、个金VIP服务手段，提高客户忠诚度，这些是银行产品开发岗位需要关注的领域，请联系banking@kb727.com预约曾担任总行产品开发部门负责人的导师进行辅导。
+                &emsp;&emsp;对于多数银行来说，当前主要考虑如何提高产品和服务的技术含量与附加值，避免金融服务同质化；如何进一步加大市场准入创新力度，争取基金托管、离岸金融、资产证券化、境外代客理财等市场准入资格，拓展经营范围和领域；如何开辟主动负债工具，探索发行金融债、可转债等筹资新品，优化资产、负债和资本结构；如何加快财富管理、衍生产品交易、电子银行产品、贸易融资等相关产品开发，通过新品开发吸引新、老客户；如何继续完善公金、个金VIP服务手段，提高客户忠诚度，这些是银行产品开发岗位需要关注的领域，请联系 banking@kb727.com 预约曾担任总行产品开发部门负责人的导师进行辅导。
                 </p>
         </div>
     </div>
@@ -256,7 +256,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>金融科技与大数据职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;在金融与IT技术相融合的金融科技领域，随着大数据、数字孪生、流程挖掘等技术的进步，金融业的技术创新有可能进一步加速。请联系banking@kb727.com预约金融科技与大数据职业规划和岗位内推。
+                &emsp;&emsp;在金融与IT技术相融合的金融科技领域，随着大数据、数字孪生、流程挖掘等技术的进步，金融业的技术创新有可能进一步加速。请联系 banking@kb727.com 预约金融科技与大数据职业规划和岗位内推。
                 </p>
         </div>
     </div>
@@ -269,7 +269,7 @@
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;☑️ 技术岗、产品岗、运营岗</br>
                 &emsp;&emsp;☑️ 市场岗、销售岗、职能岗</br></br>
-                &emsp;&emsp;请联系banking@kb727.com预约信息技术与互联网职业规划和岗位内推。
+                &emsp;&emsp;请联系 banking@kb727.com 预约信息技术与互联网职业规划和岗位内推。
                 </p>
         </div>
     </div>
@@ -342,7 +342,7 @@
                 &emsp;&emsp;56.施工现场管理与项目知识管理提升；</br>
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
                 &emsp;&emsp;<b>课程讲师：</b>授课老师曾担任银行基建部门负责人，具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
-                &emsp;&emsp;<b>课程预约：</b>请联系banking@kb727.com预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;<b>课程预约：</b>请联系 banking@kb727.com 预约资深专家，全部讲解需120分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -382,7 +382,7 @@
                 &emsp;&emsp;20、档案电子化处理；</br>
                 &emsp;&emsp;21、财务账目；</br>
                 &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
-                &emsp;&emsp;本课程适合史志初学者或相关岗位求职面试辅导，请联系historical@kb727.com预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合史志初学者或相关岗位求职面试辅导，请联系 historical@kb727.com 预约资深专家，全部讲解需90分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -393,7 +393,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>中国古典文献收藏与古籍整理辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系historical@kb727.com预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。本课程适合古籍收藏者或相关岗位求职面试辅导。
+                &emsp;&emsp;请联系 historical@kb727.com 预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。本课程适合古籍收藏者或相关岗位求职面试辅导。
                 </p>
         </div>
     </div>
@@ -471,7 +471,7 @@
             <div class="container text-center">
                 <h2><b>奖励物品及可售清单</b></h2>
                 <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达，请联系 Min@kb727.com 问询相关事宜。</p>
+                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达，请联系 min@kb727.com 问询相关事宜。</p>
             </div>
         </div>
 
