--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ color:#333333;
 text-decoration:none;
 }
 </style>
-            <p>Copyright &copy; 2015-2024, KB727.COM all rights reserved. Please refer to the <a href="attachments/privacy-statement-zh.txt">privacy statement</a>. Unauthorized use of the content of this website will face legal action.</p>
+            <p>Copyright &copy; 2015-2024，KB727.COM 版权所有，保留所有权利。请参阅<a href="attachments/privacy-statement.txt">隐私声明</a>。未经授权使用本网站内容将面临法律诉讼。</p>
                 </div>
             </div>
         </div>
