--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a id="menu-close" href="#" class="btn btn-index btn-lg pull-right toggle" onClick="ga('send', '_trackEvent', 'Navbar', 'Toggle', 'Navbar toggle');"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand"><a href="#top"><b>KB727.COM</b></a></li>
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
-            <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">获奖项目</a></li>
+            <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
             <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
@@ -58,9 +58,9 @@
             <h2><b>提供奖励和支持</b></h2>
             </div></br></br></br></br>
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-brands fa-trello fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-person-chalkboard fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-flipboard fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
+                <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
@@ -95,7 +95,7 @@
     <!-- services -->
         <div id="services" class="services">
             <div class="container text-center">
-                <h2><b>已认证的获奖项目</b></h2>
+                <h2><b>认证项目</b></h2>
                 <hr>
                 <p class="lead" style="text-align: left">&emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。以下私教课程已通过我们的认证并获得奖励。</p>
             </div>
@@ -421,7 +421,7 @@
                     <img src="img/media.png" alt="合作伙伴">
                     <div class="caption">
                         <h3>媒体</h3>
-                        <p style="text-align: left">&emsp;&emsp;欢迎媒体参与，分享我们的工作，我们尽最大的努力支持所有获奖项目的商业推广。</p>
+                        <p style="text-align: left">&emsp;&emsp;欢迎媒体参与，分享我们的工作，我们尽最大的努力支持所有认证项目的商业推广。</p>
                     </div>
                 </div>
             </div>
@@ -566,9 +566,9 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
             <ul class="list-inline spaced">
-                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-brands fa-trello fa-3x"></i></a></li>
-                <li><a href="#services" title="获奖项目" alt="获奖项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-person-chalkboard fa-3x"></i></a></li>
-                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-brands fa-flipboard fa-3x"></i></a></li>
+                <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
+                <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
+                <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
                 <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
