--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </br></br>
                 &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
-                &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持，欢迎您发送邮件给 min@kb727.com 联系我。
+                &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
                 </p>
             </div>
@@ -97,7 +97,7 @@
             <div class="container text-center">
                 <h2><b>认证项目</b></h2>
                 <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。以下私教课程已通过我们的认证并获得奖励。</p>
+                <p class="lead" style="text-align: left">&emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。以下15门私教课程已通过我们的认证并获得奖励，认证文件及奖励物品派送均通过本站邮件确认。</p>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-3" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>酒店资产购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
@@ -154,7 +154,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-4" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>办公楼购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
@@ -165,7 +165,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-5" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>二手地及建筑物资产出售岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -176,7 +176,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-6" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>资产经营总经理岗位求职面试辅导和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
@@ -195,7 +195,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-7" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>物流地产投资总监岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -206,7 +206,7 @@
 
     </br>
 
-    <div id="services-1" class="services">
+    <div id="services-8" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>电气工程设计岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -230,7 +230,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-9" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>银行社招和校招岗位分析与面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -241,7 +241,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-10" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>银行产品开发岗位面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -252,7 +252,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-11" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>金融科技与大数据职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
@@ -263,7 +263,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-12" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>信息技术与互联网职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
@@ -276,7 +276,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-13" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>银行网点新业态提升与基建工程管理岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -349,7 +349,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-14" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>人物传记与回忆录撰写指导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -389,7 +389,7 @@
 
     </br>
 
-    <div id="services-3" class="services">
+    <div id="services-15" class="services">
         <div class="container">
                 <h3 style="text-align: left"><b>中国古典文献收藏与古籍整理辅导</b></h3>
                 <p class="lead" style="text-align: left">
@@ -471,13 +471,37 @@
             <div class="container text-center">
                 <h2><b>奖励物品及可售清单</b></h2>
                 <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达，请联系 min@kb727.com 问询相关事宜。</p>
+                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达。</p>
             </div>
         </div>
 
     </br>
 
     <div id="Rewards-1" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>YONEX Fiore女士高尔夫球杆</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;市面上最轻的YONEX Fiore 女士高尔夫套杆，性价比天花板，日系轻弹好打，容错好，颜值高，就问这颜值你爱💖了吗？#高尔夫装备 #高尔夫球杆 #素颜女神</br></br>
+                <img src="attachments/YONEX-Fiore.jpg" alt="YONEX Fiore女士高尔夫球杆" width="100%">
+                </p>
+        </div>
+    </div>
+ 
+    </br>
+
+    <div id="Rewards-2" class="Rewards">
+        <div class="container">
+                <h3 style="text-align: left"><b>段奕宏签名题字</b></h3>
+                <p class="lead" style="text-align: left">
+                &emsp;&emsp;铮铮铁骨，字如其人，仅作为本站奖品，不用于出售。</br></br>
+                <img src="attachments/DuanYihong.jpg" alt="段奕宏签名题字" width="100%">
+                </p>
+        </div>
+    </div>
+
+    </br>
+
+    <div id="Rewards-3" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
                 <p class="lead" style="text-align: left">
@@ -489,7 +513,7 @@
 
     </br>
 
-    <div id="Rewards-2" class="Rewards">
+    <div id="Rewards-4" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>Epson平板式扫描仪</b></h3>
                 <p class="lead" style="text-align: left">
@@ -504,7 +528,7 @@
 
     </br>
 
-    <div id="Rewards-3" class="Rewards">
+    <div id="Rewards-5" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>广州版《天龙八部》全五册</b></h3>
                 <p class="lead" style="text-align: left">
@@ -517,7 +541,7 @@
 
     </br>
 
-    <div id="Rewards-4" class="Rewards">
+    <div id="Rewards-6" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>《现代成名学》上下册</b></h3>
                 <p class="lead" style="text-align: left">
@@ -533,7 +557,7 @@
 
     </br>
 
-    <div id="Rewards-5" class="Rewards">
+    <div id="Rewards-7" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
                 <p class="lead" style="text-align: left">
@@ -546,7 +570,7 @@
 
     </br>
 
-    <div id="Rewards-6" class="Rewards">
+    <div id="Rewards-8" class="Rewards">
         <div class="container">
                 <h3 style="text-align: left"><b>各国硬币收藏夹</b></h3>
                 <p class="lead" style="text-align: left">
