--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>段奕宏签名题字</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;铮铮铁骨，字如其人，仅作为本站奖品，不用于出售。</br></br>
+                &emsp;&emsp;铮铮铁骨，字如其人。“段奕宏以演技和实力演绎着每部戏中的角色，演绎着自己与众不同的星途，观众对他真面目的认识也因他演绎的角色而蒙上一层美丽而神秘的面纱。细看段奕宏的作品单，很难找到同类型的角色。无论角色，还是表达方式，不墨守成规都是他对自己的要求。观众惊异于他一人千面的演技：下一部片子和上一部片子里完全是两个人，甚至面相都不同。段奕宏精湛、细腻的演技经常得到圈内人士、观众的赞赏，但他从未骄纵过。段奕宏给人的感觉是淡定、宠辱不惊。”（《南方人物周刊》评）。</br></br>
                 <img src="attachments/DuanYihong.jpg" alt="段奕宏签名题字" width="100%">
                 </p>
         </div>
@@ -505,7 +505,8 @@
         <div class="container">
                 <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;佳能600D单反相机，18-55镜头，原价：4599元，本站可售报价：2000元。官网信息：https://www.canon.com.cn/product/600d/</br></br>
+                &emsp;&emsp;佳能600D单反相机，18-55镜头，原价：4599元。</br>
+                &emsp;&emsp;官网信息：https://www.canon.com.cn/product/600d/</br></br>
                 <img src="attachments/CANON-EOS-600D-18-55.jpg" alt="Canon EOS 600D单反相机" width="100%">
                 </p>
         </div>
@@ -519,7 +520,7 @@
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;产品类型：A4平板式扫描仪</br>
                 &emsp;&emsp;产品型号：Epson Perfection V39</br>
-                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色A4 300dpi 9.9 秒/页。本站捡漏价：280元。</br>
+                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色A4 300dpi 9.9 秒/页。</br>
                 &emsp;&emsp;官网介绍：https://www.epson.com.cn/products/scanners/206/V39/</br></br>
                 <img src="attachments/Epson-perfection-v39-scanner.jpg" alt="Epson平板式扫描仪" width="100%">
                 </p>
@@ -561,7 +562,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;永久使用标准版授权，无需续费。本站可售报价：500元。</br>
+                &emsp;&emsp;永久使用标准版授权，无需续费。</br>
                 &emsp;&emsp;官网: http​‌‌s://www.s-cms.cn</br></br>
                 <img src="attachments/cms.png" alt="管理信息系统永久商业授权" width="100%">
                 </p>
@@ -574,7 +575,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>各国硬币收藏夹</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;内含美元、日元、韩元、泰铢、菲律宾披索、阿联酋迪拉姆等各国硬币，仅作为奖品，不用于出售。</br></br>
+                &emsp;&emsp;内含美元、日元、韩元、泰铢、菲律宾披索、阿联酋迪拉姆等各国硬币。</br></br>
                 <img src="attachments/coins.jpg" alt="硬币：韩元、菲律宾披索、阿联酋迪拉姆" width="100%">
                 </p>
         </div>
