--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
-            <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">奖励物品</a></li>
+            <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
         </ul>
     </div>
@@ -61,7 +61,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="#Rewards" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
@@ -82,7 +82,7 @@
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。我认为金钱不应该决定接受教育的机会，我希望生活在一个所有孩子都能接受良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
+                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
@@ -97,7 +97,7 @@
             <div class="container text-center">
                 <h2><b>认证项目</b></h2>
                 <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。以下15门私教课程已通过我们的认证并获得奖励，认证文件及奖励物品派送均通过本站邮件确认。</p>
+                <p class="lead" style="text-align: left">&emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。以下15门私教课程已通过我们的认证并获得奖励，认证文件及奖励物品派送均通过官网邮件确认。</p>
             </div>
         </div>
 
@@ -594,7 +594,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="#Rewards" target="_blank"  title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="#Rewards" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
