--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。我认为金钱不应该决定接受教育的机会，我希望生活在一个所有孩子都能接受良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">”奖励物品“），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
+                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">”奖励物品“</a>），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
