--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;您好，我是来自中国上海的 Min，我创建的这个中文简体网站，来源于我在美国西雅图、布法罗的ESOL教学实践，期间我接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
+                &emsp;&emsp;您好，我是来自中国上海的 Min，我创建的这个中文简体网站，来源于我在美国西雅图、布法罗的 ESOL 教学实践，期间我接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。我认为金钱不应该决定接受教育的机会，我希望生活在一个所有孩子都能接受良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为此，我和我的伙伴们愿意为同一个导师、持续6个月以上为低收入家庭和经济困难者免费辅导的私教课程，提供象征性激励的奖品（详见<a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">”奖励物品“</a>），并尽最大努力为这些有社会责任感的私教课程提供商业化推广支持。
+                &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
@@ -471,7 +471,7 @@
             <div class="container text-center">
                 <h2><b>奖励物品及可售清单</b></h2>
                 <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，部分可售，全部包邮送达。</p>
+                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，全部包邮送达。</p>
             </div>
         </div>
 
@@ -520,7 +520,7 @@
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;产品类型：A4平板式扫描仪</br>
                 &emsp;&emsp;产品型号：Epson Perfection V39</br>
-                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色A4 300dpi 9.9 秒/页。</br>
+                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色 A4 300dpi 9.9 秒/页。</br>
                 &emsp;&emsp;官网介绍：https://www.epson.com.cn/products/scanners/206/V39/</br></br>
                 <img src="attachments/Epson-perfection-v39-scanner.jpg" alt="Epson平板式扫描仪" width="100%">
                 </p>
