--- a/index.html
+++ b/index.html
@@ -602,6 +602,8 @@
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
                     </ul>
+                    <a href="attachments/EN-BRIEF.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">One-Page Overview</a></br></br>
+                    <a href="attachments/CN-BRIEF.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">单页概览</a>
                 <div class="top-scroll">
                 <a href="#top" title="Back to top" alt="Back to top"><i class="fa fa-angle-double-up scroll fa-4x"></i></a>
                 </div>
